{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 14,
  "lineage": "51a0e40e-39ac-288e-0aea-7b4a246d1bc2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "SN1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:498247215385:instance/i-02ecb54b01d46e35d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02ecb54b01d46e35d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e1de57269e098f56",
            "private_dns": "ip-10-1-1-156.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.156",
            "public_dns": "ec2-3-236-189-132.compute-1.amazonaws.com",
            "public_ip": "3.236.189.132",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ed2f4be4aeb3dd8a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035f9ae32c59347ff",
            "tags": {
              "App": "Web",
              "Name": "shiva-Linux",
              "Owner": "shiva-RedHat"
            },
            "tags_all": {
              "App": "Web",
              "Name": "shiva-Linux",
              "Owner": "shiva-RedHat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0519491d0b6314725"
            ]
          },
          "dependencies": [
            "aws_key_pair.vm_key",
            "aws_security_group.vm_security_group",
            "aws_subnet.aws_subnet_block",
            "aws_vpc.aws_vpc_name",
            "data.aws_ami.latest_amazon_linux"
          ]
        },
        {
          "index_key": "SN2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c4e4b4eb2e11d1d4",
            "arn": "arn:aws:ec2:us-east-1:498247215385:instance/i-0475b1074a1cb9c2b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0475b1074a1cb9c2b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01cdce0a60811cdf6",
            "private_dns": "ip-10-1-2-157.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.157",
            "public_dns": "ec2-52-90-241-163.compute-1.amazonaws.com",
            "public_ip": "52.90.241.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05461dbeaa21460a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cc2687266e8ad93",
            "tags": {
              "App": "Web",
              "Name": "shiva-Linux",
              "Owner": "shiva-RedHat"
            },
            "tags_all": {
              "App": "Web",
              "Name": "shiva-Linux",
              "Owner": "shiva-RedHat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0519491d0b6314725"
            ]
          },
          "dependencies": [
            "aws_key_pair.vm_key",
            "aws_security_group.vm_security_group",
            "aws_subnet.aws_subnet_block",
            "aws_vpc.aws_vpc_name",
            "data.aws_ami.latest_amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "SN1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d08089481510ba2",
            "arn": "arn:aws:ec2:us-east-1:498247215385:instance/i-0adf5508cb33cafc9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0adf5508cb33cafc9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0742309370ccf3f7d",
            "private_dns": "ip-10-1-1-13.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.13",
            "public_dns": "ec2-3-89-86-233.compute-1.amazonaws.com",
            "public_ip": "3.89.86.233",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0131a38b7eec25688",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-035f9ae32c59347ff",
            "tags": {
              "App": "Web",
              "Name": "shiva-ubuntu",
              "Owner": "shiva-Debian"
            },
            "tags_all": {
              "App": "Web",
              "Name": "shiva-ubuntu",
              "Owner": "shiva-Debian"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0519491d0b6314725"
            ]
          },
          "dependencies": [
            "aws_key_pair.vm_key",
            "aws_security_group.vm_security_group",
            "aws_subnet.aws_subnet_block",
            "aws_vpc.aws_vpc_name",
            "data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": "SN2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01d08089481510ba2",
            "arn": "arn:aws:ec2:us-east-1:498247215385:instance/i-0e5e05461a52e061d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e5e05461a52e061d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "linux",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00e79b6481c9256ed",
            "private_dns": "ip-10-1-2-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.2.245",
            "public_dns": "ec2-184-73-9-149.compute-1.amazonaws.com",
            "public_ip": "184.73.9.149",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0689a9086c6990f86",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08cc2687266e8ad93",
            "tags": {
              "App": "Web",
              "Name": "shiva-ubuntu",
              "Owner": "shiva-Debian"
            },
            "tags_all": {
              "App": "Web",
              "Name": "shiva-ubuntu",
              "Owner": "shiva-Debian"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0519491d0b6314725"
            ]
          },
          "dependencies": [
            "aws_key_pair.vm_key",
            "aws_security_group.vm_security_group",
            "aws_subnet.aws_subnet_block",
            "aws_vpc.aws_vpc_name",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498247215385:internet-gateway/igw-064af89cae2f8ab09",
            "id": "igw-064af89cae2f8ab09",
            "owner_id": "498247215385",
            "tags": {
              "Name": "vpc-assignment"
            },
            "tags_all": {
              "Name": "vpc-assignment"
            },
            "vpc_id": "vpc-0f986aa62806fde95"
          },
          "dependencies": [
            "aws_vpc.aws_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498247215385:route-table/rtb-07c826fc3b77e4fe2",
            "id": "rtb-07c826fc3b77e4fe2",
            "owner_id": "498247215385",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-064af89cae2f8ab09",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f986aa62806fde95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.aws_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "SN1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068bfcee0ca0694a6",
            "route_table_id": "rtb-07c826fc3b77e4fe2",
            "subnet_id": "subnet-035f9ae32c59347ff"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.aws_subnet_block",
            "aws_vpc.aws_vpc_name"
          ]
        },
        {
          "index_key": "SN2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea67ef9b4eeea280",
            "route_table_id": "rtb-07c826fc3b77e4fe2",
            "subnet_id": "subnet-08cc2687266e8ad93"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.route_table",
            "aws_subnet.aws_subnet_block",
            "aws_vpc.aws_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vm_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498247215385:security-group/sg-0519491d0b6314725",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0519491d0b6314725",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221115205336343900000001",
            "name_prefix": "terraform-",
            "owner_id": "498247215385",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "only_ssh_Http_vms"
            },
            "tags_all": {
              "Name": "only_ssh_Http_vms"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f986aa62806fde95"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.aws_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_subnet_block",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "SN1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498247215385:subnet/subnet-035f9ae32c59347ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035f9ae32c59347ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498247215385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-SN1"
            },
            "tags_all": {
              "Name": "assignment-SN1"
            },
            "vpc_id": "vpc-0f986aa62806fde95"
          },
          "dependencies": [
            "aws_vpc.aws_vpc_name"
          ]
        },
        {
          "index_key": "SN2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498247215385:subnet/subnet-08cc2687266e8ad93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08cc2687266e8ad93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498247215385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "assignment-SN2"
            },
            "tags_all": {
              "Name": "assignment-SN2"
            },
            "vpc_id": "vpc-0f986aa62806fde95"
          },
          "dependencies": [
            "aws_vpc.aws_vpc_name"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "aws_vpc_name",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:498247215385:vpc/vpc-0f986aa62806fde95",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-08848caef67a6b218",
            "default_route_table_id": "rtb-0492ae25c333a5734",
            "default_security_group_id": "sg-08eb8437260269dd8",
            "dhcp_options_id": "dopt-048cd0d2284c166ec",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f986aa62806fde95",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0492ae25c333a5734",
            "owner_id": "498247215385",
            "tags": {
              "Name": "vpc-assignment"
            },
            "tags_all": {
              "Name": "vpc-assignment"
            }
          }
        }
      ]
    }
  ]
}